sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:10: error: illegal start of simple expression
			if (!plusPetitQue(, v) {
                                          ^AlgInsertionSort:14: error: ')' expected but '}' found.
		}
                ^